--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Sanjana's Website
 email: sanjkris@live.unc.edu
 description: INLS 161
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://sanjkris.github.io" # the base hostname & protocol for your site
 twitter_username: 
 github_username:  sanjkris
 
