--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Sanjana's Websit
-<img src="http://dille.name/media/2016/03/Repository.png">
+title: Sanjana's Website
 email: sanjkris@live.unc.edu
 description: INLS 161
 baseurl: "" # the subpath of your site, e.g. /blog
